refactor: use graphql for backend repo
refactor: use graphql for backend repo

refactor: use graphql for backend repo

--- a/.graphqlrc.yml
+++ b/.graphqlrc.yml
@@ -1,3 +1,5 @@
 schema:
   - 'schema.graphql'
-documents: 'libs/frontend/domain/**/*.graphql'
+documents:
+  - 'libs/frontend/domain/**/*.graphql'
+  - 'libs/frontend/abstract/domain/**/*.graphql'
