--- a/.graphqlrc.yml
+++ b/.graphqlrc.yml
@@ -1,5 +1,10 @@
 schema:
   - 'schema.graphql'
+  - 'libs/backend/infra/adapter/neo4j/src/directives/**/*.directive.graphql'
 documents:
   - 'libs/frontend/domain/**/*.graphql'
   - 'libs/frontend/abstract/domain/**/*.graphql'
+# schema:
+#   - 'schema.graphql'
+#   # - '**/*.directive.graphql'
+# documents: '**/*.graphql'
