fix: integration specs and db connection

--- a/.docker/dev/docker-compose.yaml
+++ b/.docker/dev/docker-compose.yaml
@@ -50,6 +50,7 @@ services:
       - codelab-neo4j-test:/plugins
       - codelab-neo4j-test:/import
       - codelab-neo4j-test:/logs
+      - ./../cypher/scripts:/scripts
     ports:
       - '7475:7474'
       - '7688:7687'
