fix: add node_options for isolated-vm

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,12 @@
 SETUP_DEV_AFTER_AUTH0_LOGIN=1
 
 #
+# Node options
+#
+# https://github.com/laverdet/isolated-vm?tab=readme-ov-file#requirements
+NODE_OPTIONS="--no-node-snapshot"
+
+#
 # NX
 #
 NX_CLOUD_ACCESS_TOKEN=
