--- a/.env.test.example
+++ b/.env.test.example
@@ -4,6 +4,12 @@
 #DEBUG='@neo4j/graphql:*'
 
 #
+# Node options
+#
+# https://github.com/laverdet/isolated-vm?tab=readme-ov-file#requirements
+NODE_OPTIONS="--no-node-snapshot"
+
+#
 # Next
 #
 NEXT_PUBLIC_WEB_HOST=http://127.0.0.1:3001
