fix: resolver with repositories

--- a/libs/backend/infra/adapter/neo4j-schema/tsconfig.lib.json
+++ b/libs/backend/infra/adapter/neo4j-schema/tsconfig.lib.json
@@ -12,5 +12,8 @@
     "noFallthroughCasesInSwitch": true
   },
   "exclude": ["jest.config.ts", "**/*.spec.ts", "**/*.test.ts"],
-  "include": ["**/*.ts"]
+  "include": [
+    "**/*.ts",
+    "../../../domain/element/src/service/element-descendants.service.ts"
+  ]
 }
