--- a/package.json
+++ b/package.json
@@ -251,6 +251,7 @@
     "use-custom-compare": "^1.4.0",
     "use-resize-observer": "8.0.0",
     "uuid": "8.3.2",
+    "validator": "^13.12.0",
     "vaul": "^0.9.1",
     "winston": "3.8.2",
     "ws": "8.17.0",
@@ -358,6 +359,7 @@
     "@types/styled-components": "5.1.26",
     "@types/supertest": "2.0.16",
     "@types/uuid": "8.3.4",
+    "@types/validator": "^13.12.2",
     "@types/wait-on": "5.3.1",
     "@types/webpack": "5.28.0",
     "@types/ws": "8.5.10",
