--- a/libs/shared/domain/module/type/project.json
+++ b/libs/shared/domain/module/type/project.json
@@ -12,6 +12,15 @@
   "targets": {
     "lint": {
       "executor": "@nx/eslint:lint"
+    },
+    "test": {
+      "executor": "@nx/jest:jest",
+      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "options": {
+        "jestConfig": "libs/shared/domain/module/type/jest.config.ts",
+        "reporters": ["default"],
+        "runInBand": true
+      }
     }
   }
 }
