--- a/libs/shared/domain/module/type/tsconfig.lib.json
+++ b/libs/shared/domain/module/type/tsconfig.lib.json
@@ -5,5 +5,6 @@
     "declaration": true,
     "types": ["node"]
   },
+  "exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts"],
   "include": ["src/**/*.ts"]
 }
