--- a/libs/shared/infra/typebox/project.json
+++ b/libs/shared/infra/typebox/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "shared-abstract-typebox",
+  "name": "shared-infra-typebox",
   "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/shared/abstract/typebox/src",
+  "sourceRoot": "libs/shared/infra/typebox/src",
   "projectType": "library",
   "tags": [
     "projectName:shared-abstract-typebox",
@@ -12,6 +12,13 @@
   "targets": {
     "lint": {
       "executor": "@nx/eslint:lint"
+    },
+    "test": {
+      "executor": "@nx/jest:jest",
+      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "options": {
+        "jestConfig": "libs/shared/infra/typebox/jest.config.ts"
+      }
     }
   }
 }
