fix: dependant types resolver
fix: dependant types resolver

fix: dependant types resolver

--- a/libs/shared/infra/typebox/project.json
+++ b/libs/shared/infra/typebox/project.json
@@ -6,7 +6,7 @@
   "tags": [
     "projectName:shared-infra-typebox",
     "projectType:library",
-    "type:concrete",
+    "type:abstract",
     "layer:infra",
     "scope:shared"
   ],
