--- a/apps/api/project.json
+++ b/apps/api/project.json
@@ -47,7 +47,8 @@
       "defaultConfiguration": "dev",
       "executor": "@nx/js:node",
       "options": {
-        "buildTarget": "api:build:dev"
+        "buildTarget": "api:build:dev",
+        "runtimeArgs": ["--enable-source-maps", "--no-node-snapshot"]
       }
     },
     "test": {
