--- a/libs/shared/abstract/types/tsconfig.json
+++ b/libs/shared/abstract/types/tsconfig.json
@@ -6,7 +6,7 @@
     "module": "commonjs",
     "outDir": "../../../../dist/out-tsc",
     "declaration": true,
-    "types": ["node", "next", "../../../../node_modules/next/types/global.d.ts"],
+    "types": ["node"],
     "strict": true,
     "noImplicitReturns": true,
     "exactOptionalPropertyTypes": true,
