--- a/package.json
+++ b/package.json
@@ -129,7 +129,7 @@
     "@rjsf/utils": "5.18.3",
     "@rjsf/validator-ajv8": "5.18.3",
     "@sentry/nestjs": "^8.47.0",
-    "@sentry/nextjs": "8",
+    "@sentry/nextjs": "^8.47.0",
     "@sentry/profiling-node": "8.47.0",
     "@sentry/react": "8.47.0",
     "@shopify/network": "3.3.0",
