--- a/package.json
+++ b/package.json
@@ -163,6 +163,7 @@
     "cors": "2.8.5",
     "cross-fetch": "3.1.4",
     "date-fns": "^3.6.0",
+    "deep-object-diff": "^1.1.9",
     "diff": "5.1.0",
     "dir-compare": "4.2.0",
     "dots-wrapper": "3.11.8",
