feat: add pino file logging for nextjs
feat: add pino file logging for nextjs

--- a/libs/frontend/infra/logger/tsconfig.json
+++ b/libs/frontend/infra/logger/tsconfig.json
@@ -5,6 +5,7 @@
     "forceConsistentCasingInFileNames": true,
     "noImplicitOverride": true,
     "noImplicitReturns": true,
+    "strict": true,
     "noFallthroughCasesInSwitch": true,
     "noPropertyAccessFromIndexSignature": true
   },
