--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -909,6 +909,9 @@
       "@codelab/frontend/infra/logger": [
         "libs/frontend/infra/logger/src/index.ts"
       ],
+      "@codelab/frontend/infra/logger/server": [
+        "libs/frontend/infra/logger/src/server/index.ts"
+      ],
       "@codelab/frontend/infra/shared": [
         "libs/frontend/infra/shared/src/index.ts"
       ],
