wip: fix child mapper component field
wip: fix child mapper component field

wip: fix child mapper component field

wip: fix child mapper component field

wip: fix child mapper component field

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -48,5 +48,10 @@
     "**/*.stories.js",
     "**/*.stories.jsx",
     "**/*.stories.tsx"
+  ],
+  "references": [
+    {
+      "path": "./tsconfig.storybook.json"
+    }
   ]
 }
