--- a/apps/web/.eslintrc.json
+++ b/apps/web/.eslintrc.json
@@ -5,12 +5,15 @@
     "next/core-web-vitals",
     "../../.eslintrc.json"
   ],
-  "ignorePatterns": ["!**/*"],
+  "ignorePatterns": ["!**/*", "storybook-static"],
   "overrides": [
     {
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
       "parserOptions": {
-        "project": ["apps/web/tsconfig(.*)?.json"]
+        "project": [
+          "apps/web/tsconfig(.*)?.json",
+          "apps/web/tsconfig.storybook.json"
+        ]
       },
       "rules": {
         "jsx-a11y/anchor-is-valid": "off",
