--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -8,6 +8,7 @@
     "moduleResolution": "node",
     "sourceMap": true,
     "target": "es2021",
+    "experimentalDecorators": true,
     "strictNullChecks": true,
     "noImplicitAny": true,
     "strictBindCallApply": true,
