--- a/.docker/dev/docker-compose.yaml
+++ b/.docker/dev/docker-compose.yaml
@@ -39,7 +39,7 @@ services:
       # - NEO4J_dbms_allow__upgrade=true
     # networks: ["codelab-neo4j"]
     restart: unless-stopped
-    # Create a wrapper around Neo4j entrypoint to run our own init scripits
+    # Create a wrapper around Neo4j entrypoint to run our own init scripts
     entrypoint: ['/scripts/entrypoint.sh']
 
   neo4j-test:
