--- a/package.json
+++ b/package.json
@@ -151,7 +151,7 @@
     "adm-zip": "0.5.10",
     "ajv": "8.12.0",
     "animate.css": "4.1.1",
-    "antd": "5.20.2",
+    "antd": "5.23.2",
     "antd-style": "3.7.1",
     "auth0": "4.7.0",
     "auto-bind": "5.0.1",
@@ -244,7 +244,7 @@
     "slugify": "1.6.6",
     "sonner": "1.5.0",
     "stack-trace": "1.0.0-pre2",
-    "storybook": "8.2.8",
+    "storybook": "8.4.7",
     "styled-components": "6.1.8",
     "sucrase": "3.32.0",
     "supertest": "6.3.3",
@@ -315,6 +315,7 @@
     "@storybook/addon-essentials": "8.4.7",
     "@storybook/addon-interactions": "8.4.7",
     "@storybook/addon-themes": "8.4.7",
+    "@storybook/addon-webpack5-compiler-swc": "^2.0.0",
     "@storybook/core-common": "8.4.7",
     "@storybook/core-server": "8.4.7",
     "@storybook/jest": "0.2.3",
@@ -332,9 +333,9 @@
     "@swc/jest": "0.2.36",
     "@swc/plugin-styled-components": "3.0.1",
     "@testing-library/dom": "10.4.0",
-    "@testing-library/jest-dom": "6.4.8",
-    "@testing-library/react": "16.0.0",
-    "@testing-library/user-event": "14.5.2",
+    "@testing-library/jest-dom": "6.6.3",
+    "@testing-library/react": "16.2.0",
+    "@testing-library/user-event": "14.6.0",
     "@types/adm-zip": "0.5.0",
     "@types/auth0": "3.3.10",
     "@types/aws-lambda": "8.10.116",
@@ -429,12 +430,14 @@
     "knip": "5.29.2",
     "lint-staged": "13.2.2",
     "minimatch": "9.0.4",
+    "msw": "^2.7.0",
+    "msw-storybook-addon": "^2.0.4",
     "nx": "20.1.4",
     "pino-pretty": "13.0.0",
     "postcss": "8.4.45",
+    "swc-loader": "^0.2.6",
     "tailwindcss": "3.4.10",
     "ts-essentials": "9.1.2",
-    "ts-jest": "29.1.0",
     "ts-morph": "19.0.0",
     "ts-node": "10.9.1",
     "typescript": "5.5.4",
