--- a/.circleci/config/jobs/codegen.yml
+++ b/.circleci/config/jobs/codegen.yml
@@ -8,6 +8,7 @@ resource_class: << parameters.resource_class >>
 
 steps:
   - restore-workspace
+  - setup-neo4j
   - run:
       name: 'Check GraphQL Codegen'
       command: pnpm cli tasks graphql-codegen --stage ci
