--- a/.circleci/config/jobs/e2e.yml
+++ b/.circleci/config/jobs/e2e.yml
@@ -14,6 +14,7 @@ environment:
 parallelism: 2
 steps:
   - restore-workspace
+  - setup-neo4j
   - run: pnpm npx playwright install-deps
   # - setup_remote_docker:
   #     version: default
