--- a/.circleci/config/jobs/lint.yml
+++ b/.circleci/config/jobs/lint.yml
@@ -18,8 +18,8 @@ steps:
   - run:
       name: 'Run Lint on Repository'
       command: pnpm cli tasks lint --stage ci
-  - run:
-      name: 'Commitlint'
-      command: pnpm cli tasks commitlint --stage ci
+  # - run:
+  #     name: 'Commitlint'
+  #     command: pnpm cli tasks commitlint --stage ci
   - store_test_results:
       path: ./tmp/reports/lint
