--- a/package.json
+++ b/package.json
@@ -452,7 +452,8 @@
   },
   "resolutions": {
     "@types/react": "18.3.0",
-    "@types/react-dom": "18.3.0"
+    "@types/react-dom": "18.3.0",
+    "nx": "20.1.4"
   },
   "nx": {
     "includedScripts": [],
