--- a/.circleci/config/commands/install-pnpm.yml
+++ b/.circleci/config/commands/install-pnpm.yml
@@ -6,3 +6,11 @@ steps:
         sudo corepack enable
         sudo corepack prepare pnpm@9.1.1 --activate
         pnpm config set store-dir ~/.pnpm-store
+
+        which pnpm
+  # This is required since dist depends on code other than pnpm-lock.yam
+  # Instead of this can use nx caching
+  - persist_to_workspace:
+      root: /
+      paths:
+        - /usr/local/bin/pnpm
