--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,10 +43,12 @@ commands:
             sudo apt-get update
             sudo apt-get install -y cypher-shell
           name: Install Cypher Shell
-      - run: |
-          # Copy the installed binary to the workspace directory
-          echo 'Check which directory cypher-shell is installed in'
-          $(which cypher-shell)
+      - run:
+          command: |
+            # Copy the installed binary to the workspace directory
+            echo 'Check which directory cypher-shell is installed in'
+            which cypher-shell
+          name: Locate Cypher Shell binary
   install-nvm:
     steps:
       - restore_cache:
