--- a/.circleci/config/commands/restore-workspace.yml
+++ b/.circleci/config/commands/restore-workspace.yml
@@ -17,4 +17,6 @@ steps:
   #     keys:
   #       # This is needed for e2e to run, but we add it here for simplicity
   #       - nx-cache-{{ checksum ".nx/cache/lockfile.hash" }}
+  - install-pnpm
+  - install-cypher-shell
   - setup-env
