--- a/.circleci/config/commands/install-pnpm.yml
+++ b/.circleci/config/commands/install-pnpm.yml
@@ -1,4 +1,6 @@
 # We need to run this before each step, since the core version isn't stored within ~/.pnpm-store
+#
+# It's better to install per job, rather than persisting /usr/local due to permissions issues
 steps:
   - run:
       name: Install pnpm package manager
@@ -6,11 +8,3 @@ steps:
         sudo corepack enable
         sudo corepack prepare pnpm@9.1.1 --activate
         pnpm config set store-dir ~/.pnpm-store
-
-        which pnpm
-  # This is required since dist depends on code other than pnpm-lock.yam
-  # Instead of this can use nx caching
-  - persist_to_workspace:
-      root: /
-      paths:
-        - /usr/local/bin/pnpm
