--- a/.circleci/config/commands/build-repo.yml
+++ b/.circleci/config/commands/build-repo.yml
@@ -29,3 +29,11 @@ steps:
         - ~/project/dist/apps/web/.next/cache
         # - ~/project/dist/apps/sites/.next/cache
         # - ~/project/dist/apps/landing/.next/cache
+  # Can also use cache, but we're using workspace for simplicity
+  - persist_to_workspace:
+      root: ~/
+      paths:
+        # Using too much workspace storage, eating up credits. Use cache instead
+        # - project/node_modules
+        - project/dist/apps/cli
+        - project/dist/apps/web
