--- a/.circleci/config/commands/restore-workspace.yml
+++ b/.circleci/config/commands/restore-workspace.yml
@@ -1,9 +1,9 @@
 description: 'Restore Workspace'
 steps:
   - checkout
-  # Attach `dist` folder, not using these currently
-  # - attach_workspace:
-  #     at: ~/
+  # Attach `dist` folder
+  - attach_workspace:
+      at: ~/
   - restore_cache:
       name: 'Restore node_modules Cache'
       keys:
