--- a/.circleci/config/commands/setup-neo4j.yml
+++ b/.circleci/config/commands/setup-neo4j.yml
@@ -1,6 +1,10 @@
 description: 'Setup Neo4j'
 steps:
   - run:
+      name: Run Neo4j Memory Recommendations
+      command: |
+        neo4j-admin server memory-recommendation --docker
+  - run:
       name: Enable CDC
       command: |
         ~/project/.docker/cypher/scripts/enable-cdc.sh
