--- a/.circleci/config/commands/restore-workspace.yml
+++ b/.circleci/config/commands/restore-workspace.yml
@@ -1,6 +1,7 @@
 description: 'Restore Workspace'
 steps:
   - checkout
+  # Attach `dist` folder
   - attach_workspace:
       at: ~/
   - restore_cache:
