--- a/.circleci/config/workflows/app-pr.yml
+++ b/.circleci/config/workflows/app-pr.yml
@@ -33,6 +33,26 @@ jobs:
             - staging
       requires:
         - setup-workspace
+  - build-nx-apps:
+      resource_class: large
+      max_old_space_size: 4096
+      filters:
+        branches:
+          ignore:
+            - master
+            - staging
+      requires:
+        - setup-workspace
+  - build-nx-libs:
+      resource_class: large
+      max_old_space_size: 4096
+      filters:
+        branches:
+          ignore:
+            - master
+            - staging
+      requires:
+        - setup-workspace
   - tsc-check:
       resource_class: large
       filters:
@@ -61,6 +81,8 @@ jobs:
       requires:
         - setup-workspace
   - integration:
+      # 4gb docker + 4gb node = 8gb large
+      # 4gb for docker is not enough for high throughput tests
       resource_class: large
       max_old_space_size: 4096
       filters:
@@ -80,7 +102,7 @@ jobs:
             - master
             - staging
       requires:
-        - setup-workspace
+        - build-nx-apps
   - notify-success:
       resource_class: medium
       filters:
@@ -93,4 +115,7 @@ jobs:
         - codegen
         - unit
         - integration
+        - build-nx-libs
+        - build-nx-apps
+        - tsc-check
         - e2e
