--- a/.circleci/config/commands/build-nx-apps.yml
+++ b/.circleci/config/commands/build-nx-apps.yml
@@ -1,9 +1,8 @@
-description: 'Build Repo'
+# Can't use `pnpm cli` doesn't exist yet
+# We split `apps` and `libs` along with their cache location
+
+description: 'Build Nx Apps'
 steps:
-  # - run:
-  #     name: 'Monitor NX Cache Size'
-  #     command: ./scripts/nx/reset-cache.sh
-  # Can't use `pnpm cli` doesn't exist yet
   - nx/set-shas:
       main-branch-name: 'master'
   - restore_cache:
@@ -13,19 +12,16 @@ steps:
         - nx-cache-{{ .Environment.CIRCLE_BRANCH }}-
         - nx-cache-
   - run:
+      name: 'Monitor NX Cache Size'
       command: (./scripts/nx/reset-cache.sh)
   - run:
       command: pnpm nx run-many --target=build --projects=web,api -c ci --nx-bail
   # CI caching guide https://nextjs.org/docs/pages/building-your-application/deploying/ci-build-caching
+  # Can also use cache, but we're using workspace for simplicity
   - save_cache:
       name: 'Save NX Cache'
-      key:
-        nx-cache-{{ .Environment.CIRCLE_BRANCH }}-{{ checksum "pnpm-lock.yaml" }}
-        # nx doesn't use `lockfile.hash` anymore, so move the pnpm
-        # - nx-cache-{{ checksum ".nx/cache/lockfile.hash" }}
+      key: nx-cache-{{ .Environment.CIRCLE_BRANCH }}-{{ checksum "pnpm-lock.yaml" }}
       paths:
         - ~/project/.nx/cache
         # https://github.com/nrwl/nx/issues/5221
         - ~/project/dist/apps/web/.next/cache
-        # - ~/project/dist/apps/sites/.next/cache
-        # - ~/project/dist/apps/landing/.next/cache
