--- a/.circleci/config/jobs/build-nx-libs.yml
+++ b/.circleci/config/jobs/build-nx-libs.yml
@@ -11,10 +11,8 @@ resource_class: << parameters.resource_class >>
 
 environment:
   NODE_OPTIONS: --max-old-space-size=<< parameters.max_old_space_size >>
+  NX_CACHE_DIRECTORY: ~/project/.nx/cache-libs
 
 steps:
-  - checkout
-  - setup-env
-  - install-nvm
-  - install-pnpm
-  - install-packages
+  - restore-workspace
+  - build-nx-libs
