fix: api log level env variable

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,8 +1,7 @@
 #
 # Debug - `debug`, `silent`
 #
-API_LOG_LEVEL=verbose,debug,info,warn,error,fatal
-
+API_LOG_LEVEL=trace,debug,info,warn,error,fatal
 #
 # Logging Context Configuration
 #
