--- a/package.json
+++ b/package.json
@@ -401,6 +401,7 @@
     "eslint-config-prettier": "9.0.0",
     "eslint-import-resolver-node": "0.3.9",
     "eslint-import-resolver-typescript": "3.6.1",
+    "eslint-plugin-ban": "^2.0.0",
     "eslint-plugin-canonical": "4.15.1",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-jest": "27.6.0",
