--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,18 +1,12 @@
 #
-# Debug - `debug`, `silent`
-#
-API_LOG_LEVEL=trace,debug,info,warn,error,fatal
-#
 # Logging Context Configuration
 #
-# Controls which contexts include extra data in logs
-# Format:
-#   - Use comma-separated values
-#   - Prefix with ! to exclude a context
-#   - Empty value allows all contexts
-#   - API_LOG_CONTEXT=ServiceA,!ServiceB (only log ServiceA, explicitly exclude ServiceB)
-#
-API_LOG_CONTEXT=
+
+# 'verbose', 'debug', 'info', 'warn', 'error', 'fatal'
+API_LOG_LEVEL=verbose,debug,info,warn,error,fatal
+# If enabled, the log level will only show the pattern
+API_LOG_CONTEXT_FILTER=verbose:.*Repository$
+API_LOG_ENABLE_DATA_FOR_CONTEXT=^ImportAdminDataHandler$
 
 #
 # Auth0 users
