--- a/libs/external/codelab-codegen/typescript-fetch/tsconfig.lib.json
+++ b/libs/external/codelab-codegen/typescript-fetch/tsconfig.lib.json
@@ -1,9 +1,11 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
+    "module": "commonjs",
     "outDir": "../../../../dist/out-tsc",
     "declaration": true,
     "types": ["node"]
   },
+  "exclude": [],
   "include": ["src/**/*.ts"]
 }
