--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -36,6 +36,9 @@
       "@codelab-codegen/typescript-server-fetch": [
         "libs/external/codelab-codegen/typescript-server-fetch/src/index.ts"
       ],
+      "@codelab-codegen/codelab-preset": [
+        "libs/external/codelab-codegen/codelab-preset/src/index.ts"
+      ],
       "@codelab/backend-infra-adapter/neo4j-driver": [
         "libs/backend/infra/adapter/neo4j-driver/src/index.ts"
       ],
