--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@
 /dist/libs/external/codelab-codegen/*
 !/dist/libs/external/codelab-codegen/typescript-fetch/
 !/dist/libs/external/codelab-codegen/typescript-server-fetch/
+!/dist/libs/external/codelab-codegen/codelab-preset/
 
 tmp/
 out-tsc/
