--- a/package.json
+++ b/package.json
@@ -101,7 +101,7 @@
     "@nestjs/passport": "11.0.5",
     "@nestjs/platform-express": "11.0.6",
     "@nestjs/swagger": "11.0.3",
-    "@next/bundle-analyzer": "14.2.8",
+    "@next/bundle-analyzer": "15.1.6",
     "@opentelemetry/api": "1.9.0",
     "@pinojs/json-colorizer": "4.0.0",
     "@radix-ui/react-accordion": "1.2.0",
@@ -203,7 +203,7 @@
     "neo4j-driver": "5.27.0",
     "nestjs-pino": "4.3.0",
     "nestjs-typebox": "3.1.1",
-    "next": "14.2.23",
+    "next": "15.1.6",
     "next-seo": "6.5.0",
     "next-themes": "0.3.0",
     "object-typed": "1.0.0",
@@ -219,16 +219,16 @@
     "radash": "12.1.0",
     "rc-select": "14.13.0",
     "rc-upload": "4.5.2",
-    "react": "18.3.1",
+    "react": "19.0.0",
     "react-day-picker": "8.10.1",
-    "react-dom": "18.3.1",
+    "react-dom": "19.0.0",
     "react-error-boundary": "4.0.13",
     "react-grid-layout": "1.4.2",
     "react-hook-form": "7.54.2",
     "react-hook-form-antd": "1.1.3",
     "react-hotjar": "5.3.0",
     "react-hotkeys-hook": "3.4.4",
-    "react-is": "18.3.1",
+    "react-is": "19.0.0",
     "react-quill": "2.0.0",
     "react-resizable": "3.0.4",
     "react-resizable-panels": "2.1.7",
@@ -293,7 +293,7 @@
     "@nestjs/devtools-integration": "0.1.6",
     "@nestjs/schematics": "11.0.0",
     "@nestjs/testing": "11.0.6",
-    "@next/eslint-plugin-next": "14.2.3",
+    "@next/eslint-plugin-next": "15.1.6",
     "@nx/devkit": "20.4.0",
     "@nx/eslint": "20.4.0",
     "@nx/eslint-plugin": "20.4.0",
@@ -360,8 +360,8 @@
     "@types/node": "18.19.9",
     "@types/passport-jwt": "4.0.1",
     "@types/prettier": "2.7.3",
-    "@types/react": "18.3.1",
-    "@types/react-dom": "18.3.1",
+    "@types/react": "19.0.8",
+    "@types/react-dom": "19.0.3",
     "@types/react-grid-layout": "1.3.4",
     "@types/react-is": "18.3.0",
     "@types/react-resizable": "1.7.4",
@@ -397,7 +397,7 @@
     "dotenv": "15.0.0",
     "env-cmd": "10.1.0",
     "eslint": "8.57.0",
-    "eslint-config-next": "15.0.2",
+    "eslint-config-next": "15.1.6",
     "eslint-config-prettier": "9.0.0",
     "eslint-import-resolver-node": "0.3.9",
     "eslint-import-resolver-typescript": "3.6.1",
@@ -453,7 +453,11 @@
       "oauth4webapi": "npm:@awwong1/oauth4webapi@latest"
     }
   },
-  "resolutions": {},
+  "resolutions": {
+    "@types/react": "19.0.8",
+    "@types/react-dom": "19.0.3",
+    "nx": "20.4.0"
+  },
   "nx": {
     "includedScripts": [],
     "tags": [
