wip: migrate to nextjs-auth0 4

--- a/.env.example
+++ b/.env.example
@@ -35,6 +35,8 @@ AUTH0_CLIENT_SECRET=
 # https://github.com/codelab-app/platform/issues/3492
 AUTH0_SESSION_AUTO_SAVE=false
 
+APP_BASE_URL=http://127.0.0.1:3000
+
 # Required for `initAuth0` even though can be drived
 # https://community.auth0.com/t/generated-access-token-is-just-having-the-header-and-no-body-there-is-no-sub-in-the-access-token/74286
 AUTH0_AUDIENCE=https://codelab-app-dev.us.auth0.com/api/v2/
