--- a/package.json
+++ b/package.json
@@ -361,7 +361,7 @@
     "@types/passport-jwt": "4.0.1",
     "@types/prettier": "3.0.0",
     "@types/react": "18.3.1",
-    "@types/react-dom": "18.3.0",
+    "@types/react-dom": "18.3.1",
     "@types/react-grid-layout": "1.3.4",
     "@types/react-is": "18.3.0",
     "@types/react-resizable": "1.7.4",
@@ -453,11 +453,7 @@
       "oauth4webapi": "npm:@awwong1/oauth4webapi@latest"
     }
   },
-  "resolutions": {
-    "@types/react": "18.3.0",
-    "@types/react-dom": "18.3.0",
-    "nx": "20.4.0"
-  },
+  "resolutions": {},
   "nx": {
     "includedScripts": [],
     "tags": [
