--- a/package.json
+++ b/package.json
@@ -48,7 +48,6 @@
     "@apollo/client": "3.12.3",
     "@apollo/server": "4.11.2",
     "@auth0/nextjs-auth0": "4.0.0",
-    "@awwong1/oauth4webapi": "1.0.0",
     "@codelab-codegen/codelab-preset": "file:dist/libs/external/codelab-codegen/codelab-preset",
     "@codelab-codegen/typescript-fetch": "file:dist/libs/external/codelab-codegen/typescript-fetch",
     "@codelab-codegen/typescript-server-fetch": "file:dist/libs/external/codelab-codegen/typescript-server-fetch",
@@ -102,7 +101,6 @@
     "@nestjs/platform-express": "11.0.7",
     "@nestjs/swagger": "11.0.3",
     "@next/bundle-analyzer": "15.1.6",
-    "@opentelemetry/api": "1.9.0",
     "@pinojs/json-colorizer": "4.0.0",
     "@radix-ui/react-accordion": "1.2.0",
     "@radix-ui/react-alert-dialog": "1.1.1",
@@ -137,10 +135,10 @@
     "@rjsf/core": "5.18.3",
     "@rjsf/utils": "5.18.3",
     "@rjsf/validator-ajv8": "5.18.3",
-    "@sentry/nestjs": "8.47.0",
-    "@sentry/nextjs": "8.47.0",
-    "@sentry/profiling-node": "8.47.0",
-    "@sentry/react": "8.47.0",
+    "@sentry/nestjs": "8.53.0",
+    "@sentry/nextjs": "8.53.0",
+    "@sentry/profiling-node": "8.53.0",
+    "@sentry/react": "8.53.0",
     "@shopify/network": "3.3.0",
     "@shopify/react-performance": "4.1.0",
     "@sinclair/typebox": "0.34.13",
@@ -188,6 +186,7 @@
     "graphql-request": "6.1.0",
     "graphql-tag": "2.12.6",
     "graphql-ws": "5.16.0",
+    "import-in-the-middle": "^1.12.0",
     "input-otp": "1.2.4",
     "isolated-vm": "5.0.3",
     "jest-text-transformer": "1.0.4",
@@ -241,6 +240,7 @@
     "recoil": "0.7.7",
     "reflect-metadata": "0.1.13",
     "remeda": "2.17.4",
+    "require-in-the-middle": "^7.5.0",
     "rooks": "7.6.1",
     "rxjs": "7.8.0",
     "server-only": "0.0.1",
@@ -312,8 +312,8 @@
     "@nx/workspace": "20.4.0",
     "@parcel/watcher": "2.4.1",
     "@playwright/test": "1.50.1",
-    "@sentry/types": "8.47.0",
-    "@sentry/utils": "8.47.0",
+    "@sentry/types": "8.53.0",
+    "@sentry/utils": "8.53.0",
     "@storybook/addon-essentials": "8.4.7",
     "@storybook/addon-interactions": "8.4.7",
     "@storybook/addon-themes": "8.4.7",
@@ -449,9 +449,7 @@
     "wait-on": "6.0.1"
   },
   "pnpm": {
-    "overrides": {
-      "oauth4webapi": "npm:@awwong1/oauth4webapi@latest"
-    }
+    "overrides": {}
   },
   "resolutions": {
     "@types/react": "19.0.8",
