refactor: dashboard props

--- a/package.json
+++ b/package.json
@@ -137,7 +137,7 @@
     "@rjsf/utils": "5.18.3",
     "@rjsf/validator-ajv8": "5.18.3",
     "@sentry/nestjs": "8.53.0",
-    "@sentry/nextjs": "8.53.0",
+    "@sentry/nextjs": "8.54.0",
     "@sentry/profiling-node": "8.53.0",
     "@sentry/react": "8.53.0",
     "@shopify/network": "3.3.0",
@@ -203,9 +203,9 @@
     "neo4j-driver": "5.27.0",
     "nestjs-pino": "4.3.0",
     "nestjs-typebox": "3.1.1",
-    "next": "15.1.6",
-    "next-seo": "6.5.0",
-    "next-themes": "0.3.0",
+    "next": "15.2.0-canary.39",
+    "next-seo": "6.6.0",
+    "next-themes": "0.4.4",
     "object-typed": "1.0.0",
     "passport": "0.7.0",
     "passport-jwt": "4.0.1",
@@ -322,7 +322,7 @@
     "@storybook/core-common": "8.4.7",
     "@storybook/core-server": "8.4.7",
     "@storybook/jest": "0.2.3",
-    "@storybook/nextjs": "8.4.7",
+    "@storybook/nextjs": "8.5.3",
     "@storybook/react": "8.4.7",
     "@storybook/react-dom-shim": "8.4.7",
     "@storybook/react-vite": "8.4.7",
